--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "google"
     ],
     "rules": {
+        "max-len": ["warn", 200],
         "indent": ["error", 4],
         "no-alert": "error",
         "prefer-const": "error",
